--- a/style.css
+++ b/style.css
@@ -1,24 +1,40 @@
 /* resetting global styles */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Franklin Gothic Medium, Arial Narrow, Arial, sans-serif;
+  scrollbar-color: red yellow;
 }
 
 html {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
+body::-webkit-scrollbar-track
+{
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   min-width: 100%;
   min-height: 100%;
 }
 
 li {
   list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 /*******************/
@@ -38,9 +54,15 @@ body {
 }
 
 .header {
+  display: flex;
   font-weight: bold;
   font-size: 1.3em;
   letter-spacing: 0.1em;
+}
+
+.header a{
+  display: block;
+  margin: 0.5em 2em;
 }
 
 #content {
@@ -160,3 +182,65 @@ img {
     border-top : 2px rgb(237, 229, 80) solid;
     width: fit-content;
 }
+
+/** mine **/
+
+#logo {
+  animation: cool-animation 15s ease-out infinite alternate;
+}
+
+
+@keyframes cool-animation {
+  50% { 
+    transform: translateX(100px) translateY(-100px);
+  }
+
+  100% { 
+    transform: translateX(-100px) translateY(-100px);
+  }
+/* 
+  100% {
+    transform: scale(2);
+  } */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #logo {
+  animation: cool 2s ease-in-out infinite;
+}
+
+@keyframes cool {
+  0%{ transform: translate(50px);}
+  50% { transform: translate(-50px)}
+  75% { transform: translate(-50px) scale(0.5); }
+  75% { transform: translate(-50px) scale(0.5); }
+  100%{ transform: translate(50px);}
+} */
