--- a/pong/style.css
+++ b/pong/style.css
@@ -9,11 +9,15 @@ html {
     height: 100vh;
 }
 
-body {
-    width: 100%;
-    height: 100%;
+
+main {
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    margin-top: 8em;
+}
+
+#scene{
+    margin: auto;
 }
 
 #table {
@@ -21,24 +25,4 @@ body {
     margin: auto;
     height: 30em;
     background-color: black;
-}
-
-.glider {
-    width: 1em;
-    height: 5em;
-    background-color: rgb(255, 120, 120);
-}
-
-.ball {
-    padding: 10px;
-    width: 1em;
-    height: 1em;
-    width: min-content;
-    border-radius: 100%;
-    background-color: red;
-}
-
-#scene{
-    background-color: black;
-    margin: auto;
 }
